js/src/tests/test262/built-ins/Error/message_property.js
var
message
=
"
my
-
message
"
;
var
error
=
new
Error
(
message
)
;
verifyEqualTo
(
error
"
message
"
message
)
;
verifyProperty
(
error
"
message
"
{
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
